--- a/libs/books/feature/src/lib/book-search-input/book-search-input.component.html
+++ b/libs/books/feature/src/lib/book-search-input/book-search-input.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="searchForm" (submit)="searchBooks()">
+<form [formGroup]="searchForm" (submit)="search$.next()">
   <mat-form-field floatLabel="never">
     <input
       autoFocus
